--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,19 +13,13 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wreorder -std=c++14")
 
 find_package(Boost REQUIRED COMPONENTS system)
 
-add_library(EdgeClass ../CPP_EdgeClass/EdgeClass.cpp)
-add_library(BranchClass ../CPP_BranchClass/BranchClass.cpp)
-
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     include_directories("${PROJECT_SOURCE_DIR}")
-    include_directories("${PROJECT_SOURCE_DIR}/EdgeClass")
-    include_directories("${PROJECT_SOURCE_DIR}/BranchClass")
 
-    add_executable(test_GraphCluster test_GraphCluster.cpp)
+    add_executable(test_GraphNode test_GraphNode.cpp)
     #add_executable(test_tuple_graph test_tuple_graph.cpp)
 
-    target_link_libraries(test_GraphCluster ${Boost_LIBRARIES})
-    target_link_libraries(test_GraphCluster EdgeClass)
-    target_link_libraries(test_GraphCluster BranchClass)
+    target_link_libraries(test_GraphNode ${Boost_LIBRARIES})
+
 endif()
