--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,76 @@
-cmake_minimum_required (VERSION 2.6)
-project (test_GraphNode)
+cmake_minimum_required (VERSION 3.4)
 
-# Boost libraries
-set(Boost_USE_STATIC_LIBS OFF)
-set(Boost_USE_MULTITHREADED OFF)
-set(Boost_USE_STATIC_RUNTIME OFF)
+enable_language(CXX)
 
-set(CMAKE_CXX_COMPILER /usr/local/bin/g++)
-#project (test_tuple_graph)
-# Set compiler flags
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wreorder -std=c++14")
+project (ugly)
 
-find_package(Boost REQUIRED COMPONENTS system)
+########################################################
+# Compiler Flags                                       #
+########################################################
 
-if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-    include_directories("${PROJECT_SOURCE_DIR}")
+IF(CMAKE_COMPILER_IS_GNUCXX)
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra -pedantic -std=c++14")
+ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
-    add_executable(test_GraphNode test_GraphNode.cpp)
-    #add_executable(test_tuple_graph test_tuple_graph.cpp)
+########################################################
+# Basic system tests (standard libraries, headers etc) #
+########################################################
 
-    target_link_libraries(test_GraphNode ${Boost_LIBRARIES})
+include(CheckIncludeFile)
+foreach(HEADER assert.h math.h stdio.h stdlib.h string.h)
+  check_include_file(${HEADER} FOUND_${HEADER})
+  if(NOT FOUND_${HEADER})
+    message(FATAL_ERROR "Could not find needed header - ${HEADER}")
+  endif(NOT FOUND_${HEADER})
+endforeach(HEADER)
 
-endif()
+include(CheckIncludeFileCXX)
+foreach(HEADER cmath fstream functional iostream limits list map ostream sstream stack stdexcept string vector)
+  check_include_file_cxx(${HEADER} FOUND_${HEADER})
+  if(NOT FOUND_${HEADER})
+    message(FATAL_ERROR "Could not find needed header - ${HEADER}")
+  endif(NOT FOUND_${HEADER})
+endforeach(HEADER)
+
+set(MATH_LIBRARIES "m" CACHE STRING "math library")
+mark_as_advanced( MATH_LIBRARIES )
+include(CheckLibraryExists)
+foreach(FUNC sqrt)
+  check_library_exists(${MATH_LIBRARIES} ${FUNC} "" FOUND_${FUNC}_${MATH_LIBRARIES})
+  if(NOT FOUND_${FUNC}_${MATH_LIBRARIES})
+    message(FATAL_ERROR "Could not find needed math function - ${FUNC}")
+  endif(NOT FOUND_${FUNC}_${MATH_LIBRARIES})
+endforeach(FUNC)
+
+###############################
+# Add header files to project #
+###############################
+
+file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/ugly/*.hpp)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+install(FILES ${HEADERS} DESTINATION include/ugly)
+
+###############################
+# Add source files to project #
+###############################
+
+file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/*.cpp)
+file(GLOB SOURCES_EDGE ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/edge/*.cpp)
+file(GLOB SOURCES_EDGE ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/edge/*.hpp)
+file(GLOB SOURCES_EDGE ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/graphvisitor/*.cpp)
+file(GLOB SOURCES_EDGE ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/graphvisitor/*.hpp)
+add_library(ugly ${SOURCES})
+add_library(ugly ${SOURCES_EDGE})
+install(TARGETS ${PROJECT_NAME} DESTINATION lib/${PROJECT_NAME})
+
+set_target_properties(ugly PROPERTIES LINKER_LANGUAGE CXX)
+
+##########################
+# Check if testing is on #
+##########################
+option(BUILD_SHARED_LIBS "Build shared libs" ON)
+option(ENABLE_TESTING "Build and enable testing stuff" OFF)
+if(ENABLE_TESTING)
+  enable_testing()
+  add_subdirectory(src/tests)
+endif(ENABLE_TESTING)
