First successful compile and test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,11 +63,7 @@ file(GLOB SOURCES2 ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/edge/*.cpp)
 file(GLOB SOURCES3 ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/edge/*.hpp)
 file(GLOB SOURCES4 ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/graphvisitor/*.cpp)
 file(GLOB SOURCES5 ${CMAKE_CURRENT_SOURCE_DIR}/src/libugly/graphvisitor/*.hpp)
-add_library(ugly ${SOURCES1})
-add_library(ugly ${SOURCES2})
-add_library(ugly ${SOURCES3})
-add_library(ugly ${SOURCES4})
-add_library(ugly ${SOURCES5})
+add_library(ugly ${SOURCES1} ${SOURCES2} ${SOURCES3} ${SOURCES4} ${SOURCES5})
 install(TARGETS ${PROJECT_NAME} DESTINATION lib/${PROJECT_NAME})
 
 set_target_properties(ugly PROPERTIES LINKER_LANGUAGE CXX)
