--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-foreach(PROG test_edge test_graph test_graph_node )
+foreach(PROG test_edge_undirected test_graph_node )
   file(GLOB ${PROG}_SOURCES ${PROG}*.cpp)
   add_executable(unit_${PROG} ${${PROG}_SOURCES})
   target_link_libraries(unit_${PROG} ugly)
