updated travis to install build essentialls

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ compiler:
   - g++
   - clang
 
+before_script:
+  - apt-get install build-essential
+
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
   - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
