--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ compiler:
   - clang
 
 before_script:
-  - apt-get install build-essential
+  - sudo apt-get install build-essential
 
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
