--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,12 @@ foreach(HEADER assert.h math.h stdio.h stdlib.h string.h)
 endforeach(HEADER)
 
 include(CheckIncludeFileCXX)
-foreach(HEADER cmath fstream functional iostream limits list map ostream sstream stack stdexcept string vector)
-  check_include_file_cxx(${HEADER} FOUND_${HEADER})
-  if(NOT FOUND_${HEADER})
-    message(FATAL_ERROR "Could not find needed header - ${HEADER}")
-  endif(NOT FOUND_${HEADER})
-endforeach(HEADER)
+#foreach(HEADER cmath fstream functional iostream limits list map ostream sstream stack stdexcept string vector)
+#  check_include_file_cxx(${HEADER} FOUND_${HEADER})
+#  if(NOT FOUND_${HEADER})
+#    message(FATAL_ERROR "Could not find needed header - ${HEADER}")
+#  endif(NOT FOUND_${HEADER})
+#endforeach(HEADER)
 
 set(MATH_LIBRARIES "m" CACHE STRING "math library")
 mark_as_advanced( MATH_LIBRARIES )
