--- a/.travis.yml
+++ b/.travis.yml
@@ -7,20 +7,23 @@ dist: trusty
 matrix:
   include:
     - os: linux
-      compiler:
-       - clang
+      addons:
+        apt:
+          sources:
+            -llvm-toolchain-trusty-5.0
+          packages:
+            - clang-5.0
       env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
+        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
     - os: linux
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - sourceline: "ppa:beineri/opt-qt-5.10.1-trusty"
-              packages:
-                - gcc-7
-                - g++-7
+          packages:
+            - g++-7
+            - gcc-7
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
