--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,9 @@ matrix:
 before_script:
   - sudo apt-get install build-essential
   - eval "${MATRIX_EVAL}"
-
+  - ls /usr/local/
+  - ls /usr/bin/
+  - ls /usr/local/bin/
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
   - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
