--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,8 @@ dist: trusty
 matrix:
   include:
     - os: linux
-      addons:
-        apt:
-          sources:
-            -llvm-toolchain-trusty-5.0
-          packages:
-            - clang-5.0
+      compiler:
+        - clang
       env:
         - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
