--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -3,9 +3,10 @@ foreach(PROG
     test_edge_directed
     test_edge_undirected 
     test_edge_weighted 
-    test_graph 
+    test_graph
+    test_graph_algorithm
     test_graph_node 
-    test_graphvisitor 
+    test_graphvisitor
     test_graphvisitor_depth_first)
   file(GLOB ${PROG}_SOURCES ${PROG}.cpp)
   add_executable(unit_${PROG} ${${PROG}_SOURCES})
