1. Refactoring 2. Added tests for checking directinality of edges 3. Added extra test for graph_algorithm 4. Updated graphvisitor to allow conversion between certain types of edges

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 foreach(PROG 
     test_edge_directed
+    test_edge_directed_weighted
     test_edge_undirected 
     test_edge_weighted 
     test_graph
